--- a/Public/2-style.css
+++ b/Public/2-style.css
@@ -143,3 +143,15 @@ li:hover{
   background-color: #0d153a;
   opacity: .6;
 }
+
+ul li span{
+  position: absolute;
+  right: 0px;
+  width: 40px;
+  top: 5px;
+  font-size: 30px;
+  color: rgb(206, 14, 14);
+  line-height: 40px;
+  text-align: center;
+}
+
