--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-   background-image: url(gradient\ image.png);
+  background-image: url(gradient\ image.png);
   background-position: center;
   background-size: 70%; 
   width: 100vw;
   height: 100vh;
   background-color: #16161a;
+  /* overflow-y: hidden; */
+  overflow-x: hidden;
 }
 
 
